--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,20 +39,14 @@ android {
     }
 }
 
-ext {
-    roomVersion = '2.4.1'
-    lifecycleVersion = '2.4.0'
-    kotlinCoroutineVersion = '1.6.0-RC'
-    glideVersion = '4.12.0'
-}
-
 dependencies {
+    def roomVersion = "2.4.2"
+    def kotlinCoroutineVersion = "1.6.2"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.appcompat:appcompat:1.4.2"
+    implementation "com.google.android.material:material:1.6.1"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //kotlin coroutines
@@ -60,10 +54,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutineVersion"
 
     //lifecycle
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$nav_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$nav_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$nav_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$nav_version"
 
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -75,7 +69,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
 
     //tests
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
