--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
-    ext.nav_version = '2.5.0-alpha01'
+    ext.nav_version = "2.5.0-rc01"
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 
